SUBDIRS = \
	system thread math string archive algorithm callback class config ai model script physics network engine reload \
	$(MAYBE_SOUND) \
	$(MAYBE_GRAPHICS) \
	$(MAYBE_SERVER) \
	$(MAYBE_CLIENT) \
	$(MAYBE_VIEWER) \
	main

DIST_SUBDIRS = \
	system thread math string archive algorithm callback class config ai model script physics network engine reload \
	sound \
	video image render font widget binding \
	server \
	client \
	viewer \
	main
