INCLUDES = -I$(srcdir)
EXTRA_DIST = src/math/unittest.c

aisrc = \
	ai/lips-ai.h \
	ai/ai-path.c \
	ai/ai-path.h \
	ai/ai-path-solver.c \
	ai/ai-path-solver.h \
	ai/ai-sector.c \
	ai/ai-sector.h \
	ai/ai-waypoint.c \
	ai/ai-waypoint.h
algsrc = \
	algorithm/lips-algorithm.h \
	algorithm/algorithm-array.h \
	algorithm/algorithm-astar.c \
	algorithm/algorithm-astar.h \
	algorithm/algorithm-bst.c \
	algorithm/algorithm-bst.h \
	algorithm/algorithm-list.h \
	algorithm/algorithm-memdic.h \
	algorithm/algorithm-octree.c \
	algorithm/algorithm-octree.h \
	algorithm/algorithm-priority-queue.h \
	algorithm/algorithm-ptrdic.h \
	algorithm/algorithm-strdic.h \
	algorithm/algorithm-u32dic.h
arcsrc = \
	archive/lips-archive.h \
	archive/archive-tar.c \
	archive/archive-tar.h \
	archive/archive-serialize.c \
	archive/archive-serialize.h \
	archive/archive-writer.c \
	archive/archive-writer.h
bndsrc = \
	binding/lips-binding.h \
	binding/binding.c \
	binding/binding.h \
	binding/binding-action.c \
	binding/binding-action.h \
	binding/binding-manager.c \
	binding/binding-manager.h \
	binding/binding-types.h
calsrc = \
	callback/lips-callback.h \
	callback/cal-callbacks.c \
	callback/cal-callbacks.h \
	callback/cal-marshal.c \
	callback/cal-marshal.h
clisrc = \
	client/lips-client.h \
	client/client.c \
	client/client.h \
	client/client-callbacks.c \
	client/client-callbacks.h \
	client/client-command.c \
	client/client-extension.h \
	client/client-module.c \
	client/client-module.h \
	client/client-network.c \
	client/client-network.h \
	client/client-object.c \
	client/client-object.h \
	client/client-script.h \
	client/client-script-action.c \
	client/client-script-binding.c \
	client/client-script-group.c \
	client/client-script-extension.c \
	client/client-script-light.c \
	client/client-script-module.c \
	client/client-script-object.c \
	client/client-script-player.c \
	client/client-script-scene.c \
	client/client-script-widget.c \
	client/client-script-window.c \
	client/client-speech.c \
	client/client-speech.h \
	client/client-types.h \
	client/client-window.c \
	client/client-window.h \
	client/widget-login.c \
	client/widget-login.h
cfgsrc = \
	config/lips-config.h \
	config/config-account.c \
	config/config-account.h \
	config/config-bans.c \
	config/config-bans.h \
	config/config-host.c \
	config/config-host.h
engsrc = \
	engine/lips-engine.h \
	engine/engine.c \
	engine/engine.h \
	engine/engine-camera.c \
	engine/engine-camera.h \
	engine/engine-constraint.c \
	engine/engine-constraint.h \
	engine/engine-iterator.h \
	engine/engine-model.c \
	engine/engine-model.h \
	engine/engine-object.c \
	engine/engine-object.h \
	engine/engine-range.h \
	engine/engine-resources.c \
	engine/engine-resources.h \
	engine/engine-sector.c \
	engine/engine-sector.h \
	engine/engine-selection.c \
	engine/engine-selection.h \
	engine/engine-types.h
fntsrc = \
	font/lips-font.h \
	font/font.c \
	font/font.h \
	font/font-layout.c \
	font/font-layout.h
gensrc = \
	generator/lips-generator.h \
	generator/generator.c \
	generator/generator.h \
	generator/generator-brush.c \
	generator/generator-brush.h \
	generator/generator-rule.c \
	generator/generator-rule.h
imgsrc = \
	image/lips-image.h \
	image/image.c \
	image/image.h \
	image/image-compress.cpp \
	image/image-compress.h \
	image/image-dds.h \
	image/image-texture.c \
	image/image-texture.h
maisrc = \
	main/main.c
matsrc = \
	math/lips-math.h \
	math/math-aabb.h \
	math/math-convert.h \
	math/math-frustum.h  \
	math/math-generic.h \
	math/math-geometry.h \
	math/math-halton.h \
	math/math-matrix.h \
	math/math-marching-cubes.c \
	math/math-marching-cubes.h \
	math/math-plane.h \
	math/math-polygon.h \
	math/math-quadratic.h \
	math/math-quaternion.h \
	math/math-rectangle.h \
	math/math-transform.h \
	math/math-triangle.h \
	math/math-types.h \
	math/math-vector.h \
	math/math-vertex.h
mdlsrc = \
	model/lips-model.h \
	model/model.c \
	model/model.h \
	model/model-animation.c \
	model/model-animation.h \
	model/model-bone.c \
	model/model-bone.h \
	model/model-faces.c \
	model/model-faces.h \
	model/model-hair.c \
	model/model-hair.h \
	model/model-ipo.c \
	model/model-ipo.h \
	model/model-ipo-channel.c \
	model/model-light.c \
	model/model-light.h \
	model/model-material.c \
	model/model-material.h \
	model/model-node.c \
	model/model-node.h \
	model/model-pose.c \
	model/model-pose.h \
	model/model-texture.c \
	model/model-texture.h \
	model/model-types.h \
	model/model-vertex.h
netsrc = \
	network/lips-network.h \
	network/network.c \
	network/network-extension.h \
	network/network-protocol.h
parsrc = \
	particle/particle-line.c \
	particle/particle-line.h \
	particle/particle-manager.c \
	particle/particle-manager.h \
	particle/particle-point.c \
	particle/particle-point.h
physrc = \
	physics/lips-physics.h \
	physics/physics.cpp \
	physics/physics.h \
	physics/physics-object.cpp \
	physics/physics-object.h \
	physics/physics-private.cpp \
	physics/physics-private.h \
	physics/physics-shape.cpp \
	physics/physics-shape.h \
	physics/physics-types.h
pthsrc = \
	paths/lips-paths.h \
	paths/paths.c \
	paths/paths.j
relsrc = \
	reload/lips-reload.h \
	reload/reload.c \
	reload/reload.h \
	reload/reload-blender.c \
	reload/reload-gimp.c \
	reload/reload-image.c
rndsrc = \
	render/lips-render.h \
	render/render.c \
	render/render.h \
	render/render-api.c \
	render/render-api.h \
	render/render-buffer.c \
	render/render-buffer.h \
	render/render-context.c \
	render/render-context.h \
	render/render-draw.c \
	render/render-draw.h \
	render/render-image.h \
	render/render-light.c \
	render/render-light.h \
	render/render-lighting.c \
	render/render-lighting.h \
	render/render-material.c \
	render/render-material.h \
	render/render-model.c \
	render/render-model.h \
	render/render-object.c \
	render/render-object.h \
	render/render-resources.c \
	render/render-resources.h \
	render/render-scene.c \
	render/render-scene.h \
	render/render-shader.c \
	render/render-shader.h \
	render/render-texture.c \
	render/render-texture.h \
	render/render-types.h \
	render/render-uniform.h
srvsrc = \
	server/lips-server.h \
	server/server.c \
	server/server.h \
	server/server-callbacks.c \
	server/server-callbacks.h \
	server/server-client.c \
	server/server-client.h \
	server/server-extension.h \
	server/server-network.c \
	server/server-network.h \
	server/server-object.c \
	server/server-object.h \
	server/server-observer.h \
	server/server-script.h \
	server/server-types.h \
	server/script/lips-server-script.h \
	server/script/script-effect.c \
	server/script/script-extension-2.c \
	server/script/script-object-2.c \
	server/script/script-server.c
scrsrc = \
	script/lips-script.h \
	script/script.c \
	script/script.h \
	script/script-class.c \
	script/script-class.h \
	script/script-data.c \
	script/script-data.h \
	script/script-private.h \
	script/script-types.h \
	script/script-util.c \
	script/script-util.h \
	script/common/lips-common-script.h \
	script/common/script-class-1.c \
	script/common/script-event.c \
	script/common/script-event.h \
	script/common/script-object-3.c \
	script/common/script-packet.c \
	script/common/script-packet.h \
	script/common/script-path.c \
	script/common/script-quaternion.c \
	script/common/script-vector.c
sndsrc = \
	sound/lips-sound.h \
	sound/sound-manager.c \
	sound/sound-manager.h \
	sound/sound-sample.c \
	sound/sound-sample.h \
	sound/sound-source.c \
	sound/sound-source.h \
	sound/sound-system.c \
	sound/sound-system.h
strsrc = \
	string/lips-string.h \
	string/string-generic.c \
	string/string-generic.h \
	string/string-parser.h \
	string/string-parser.c \
	string/string-reader.c \
	string/string-reader.h
syssrc = \
	system/lips-system.h \
	system/system.c \
	system/system.h \
	system/system-compiler.h \
	system/system-directory.c \
	system/system-directory.h \
	system/system-endian.h \
	system/system-error.c \
	system/system-error.h \
	system/system-file.c \
	system/system-file.h \
	system/system-execute.c \
	system/system-execute.h \
	system/system-misc.c \
	system/system-misc.h \
	system/system-module.c \
	system/system-module.h \
	system/system-notify.c \
	system/system-notify.h \
	system/system-path.c \
	system/system-path.h \
	system/system-relative.c \
	system/system-relative.h \
	system/system-types.c \
	system/system-types.h \
	system/system-user.c \
	system/system-user.h
thrsrc = \
	thread/lips-thread.h \
	thread/thread-async-call.c \
	thread/thread-async-call.h
vidsrc = \
	video/lips-video.h \
	video/video-calls.c \
	video/video-calls.h \
	video/video-features.c \
	video/video-features.h \
	video/video-opengl.h
viesrc = \
	viewer/viewer.c \
	viewer/viewer.h
voxsrc = \
	voxel/lips-voxel.h \
	voxel/voxel.c \
	voxel/voxel.h \
	voxel/voxel-block.c \
	voxel/voxel-block.h \
	voxel/voxel-builder.c \
	voxel/voxel-builder.h \
	voxel/voxel-iterator.h \
	voxel/voxel-manager.c \
	voxel/voxel-manager.h \
	voxel/voxel-material.c \
	voxel/voxel-material.h \
	voxel/voxel-sector.c \
	voxel/voxel-sector.h \
	voxel/voxel-types.h
wdgsrc = \
	widget/lips-widget.h \
	widget/widget.c \
	widget/widget.h \
	widget/widget-busy.c \
	widget/widget-busy.h \
	widget/widget-button.c \
	widget/widget-button.h \
	widget/widget-check.c \
	widget/widget-check.h \
	widget/widget-class.h \
	widget/widget-entry.c \
	widget/widget-entry.h \
	widget/widget-event.h \
	widget/widget-group.c \
	widget/widget-group.h \
	widget/widget-image.c \
	widget/widget-image.h \
	widget/widget-label.c \
	widget/widget-label.h \
	widget/widget-manager.c \
	widget/widget-manager.h \
	widget/widget-menu.c \
	widget/widget-menu.h \
	widget/widget-menugroup.c \
	widget/widget-menugroup.h \
	widget/widget-private.h \
	widget/widget-progress.c \
	widget/widget-progress.h \
	widget/widget-render.c \
	widget/widget-render.h \
	widget/widget-scroll.c \
	widget/widget-scroll.h \
	widget/widget-spin.c \
	widget/widget-spin.h \
	widget/widget-tree.c \
	widget/widget-tree.h \
	widget/widget-types.h \
	widget/widget-window.c \
	widget/widget-window.h

prgdir = $(PROGDIR)
prg_PROGRAMS = lipsofsuna
bin_PROGRAMS = lipsofsuna-client lipsofsuna-generator lipsofsuna-server lipsofsuna-viewer
lib_LTLIBRARIES = liblipsofsunaclient.la liblipsofsunaserver.la

liblipsofsunaclient_la_CFLAGS = $(LICLI_CFLAGS)
liblipsofsunaclient_la_CXXFLAGS = $(CXXFLAGS) $(LICLI_CFLAGS)
liblipsofsunaclient_la_LDFLAGS = -no-undefined
liblipsofsunaclient_la_LIBADD = $(LICLI_LIBS)
liblipsofsunaclient_la_SOURCES = \
	$(aisrc) $(algsrc) $(arcsrc) $(bndsrc) $(calsrc) $(cfgsrc) $(clisrc) \
	$(engsrc) $(fntsrc) $(gensrc) $(imgsrc) $(matsrc) $(mdlsrc) $(netsrc) \
	$(parsrc) $(physrc) $(pthsrc) $(relsrc) $(rndsrc) $(srvsrc) $(scrsrc) \
	$(sndsrc) $(strsrc) $(syssrc) $(thrsrc) $(vidsrc) $(voxsrc) $(wdgsrc)

liblipsofsunaserver_la_CFLAGS = $(LISRV_CFLAGS)
liblipsofsunaserver_la_CXXFLAGS = $(CXXFLAGS) $(LISRV_CFLAGS)
liblipsofsunaserver_la_LDFLAGS = -no-undefined
liblipsofsunaserver_la_LIBADD = $(LISRV_LIBS)
liblipsofsunaserver_la_SOURCES = \
	$(aisrc) $(algsrc) $(arcsrc) $(calsrc) $(cfgsrc) $(engsrc) $(matsrc) \
	$(mdlsrc) $(netsrc) $(physrc) $(pthsrc) $(srvsrc) $(scrsrc) $(strsrc) \
	$(syssrc) $(thrsrc) $(voxsrc)

lipsofsuna_LDFLAGS = $(PTHREAD_LIBS) $(PTHREAD_CFLAGS) $(LIPS_LIBS) $(LIPS_CFLAGS)
lipsofsuna_CFLAGS = $(LIPS_CFLAGS)
lipsofsuna_SOURCES = $(maisrc) \
	system/system-error.c \
	system/system-execute.c \
	system/system-path.c \
	system/system-relative.c

lipsofsuna_client_CFLAGS = $(LICLI_CFLAGS)
lipsofsuna_client_CXXFLAGS = $(CXXFLAGS) $(LICLI_CFLAGS)
lipsofsuna_client_LDADD = liblipsofsunaclient.la $(SDL_LIBS) -lSDL_ttf -lSDL_image
lipsofsuna_client_SOURCES = client/client-main.c

lipsofsuna_generator_CFLAGS = $(LICLI_CFLAGS)
lipsofsuna_generator_CXXFLAGS = $(CXXFLAGS) $(LISRV_CFLAGS)
lipsofsuna_generator_LDADD = liblipsofsunaserver.la
lipsofsuna_generator_SOURCES = $(gensrc) generator/generator-main.c

lipsofsuna_server_CFLAGS = $(LICLI_CFLAGS)
lipsofsuna_server_CXXFLAGS = $(CXXFLAGS) $(LISRV_CFLAGS)
lipsofsuna_server_LDADD = liblipsofsunaserver.la
lipsofsuna_server_SOURCES = server/server-main.c

lipsofsuna_viewer_CFLAGS = $(LICLI_CFLAGS)
lipsofsuna_viewer_CXXFLAGS = $(CXXFLAGS) $(LICLI_CFLAGS)
lipsofsuna_viewer_LDADD = liblipsofsunaclient.la $(SDL_LIBS) -lSDL_ttf -lSDL_image
lipsofsuna_viewer_SOURCES = $(viesrc) viewer/viewer-main.c

install-data-local:
	$(mkinstalldirs) $(DATADIR)
	$(mkinstalldirs) $(SAVEDIR)
