INCLUDES = -I$(srcdir)/..
AM_CFLAGS = $(LIPS_CFLAGS)

lib_LTLIBRARIES = \
	liblipsalgorithm.la

liblipsalgorithm_la_SOURCES = \
	lips-algorithm.h \
	algorithm-array.h \
	algorithm-astar.c \
	algorithm-astar.h \
	algorithm-bst.c \
	algorithm-bst.h \
	algorithm-list.h \
	algorithm-memdic.h \
	algorithm-octree.c \
	algorithm-octree.h \
	algorithm-priority-queue.h \
	algorithm-ptrdic.h \
	algorithm-strdic.h \
	algorithm-u32dic.h

