INCLUDES = -I$(srcdir)/..
AM_CFLAGS = $(LIPS_CFLAGS) $(LUA_CFLAGS) $(SDL_CFLAGS) $(OPENGL_CFLAGS)

lib_LTLIBRARIES = \
	liblipsengine.la

liblipsengine_la_SOURCES = \
	lips-engine.h \
	engine.c \
	engine.h \
	engine-block.c \
	engine-block.h \
	engine-block-builder.c \
	engine-block-builder.h \
	engine-camera.c \
	engine-camera.h \
	engine-model.c \
	engine-model.h \
	engine-object.c \
	engine-object.h \
	engine-render.c \
	engine-render.h \
	engine-resources.c \
	engine-resources.h \
	engine-sector.c \
	engine-sector.h \
	engine-selection.c \
	engine-selection.h \
	engine-types.h
