INCLUDES = -I$(srcdir)/..
AM_CFLAGS = $(LIPS_CFLAGS)

lib_LTLIBRARIES = \
	liblipsmodel.la

liblipsmodel_la_SOURCES = \
	lips-model.h \
	model.c \
	model.h \
	model-animation.c \
	model-animation.h \
	model-bone.c \
	model-bone.h \
	model-ipo.c \
	model-ipo.h \
	model-ipo-channel.c \
	model-light.c \
	model-light.h \
	model-node.c \
	model-node.h \
	model-pose.c \
	model-pose.h \
	model-types.h \
	model-vertex.h
