INCLUDES = -I$(srcdir)/..
AM_CFLAGS = $(LIPS_CFLAGS) $(SDL_CFLAGS) $(OPENGL_CFLAGS)

lib_LTLIBRARIES = \
	liblipsrender.la

liblipsrender_la_SOURCES = \
	lips-render.h \
	render.c \
	render.h \
	render-constraint.c \
	render-constraint.h \
	render-context.c \
	render-context.h \
	render-draw.c \
	render-draw.h \
	render-image.h \
	render-light.c \
	render-light.h \
	render-lighting.c \
	render-lighting.h \
	render-material.c \
	render-material.h \
	render-model.c \
	render-model.h \
	render-object.c \
	render-object.h \
	render-particle.c \
	render-particle.h \
	render-resources.c \
	render-resources.h \
	render-scene.h \
	render-shader.c \
	render-shader.h \
	render-texture.c \
	render-texture.h \
	render-types.h \
	render-uniform.h
