INCLUDES = -I$(srcdir)/..
AM_CFLAGS = $(LIPS_CFLAGS)

lib_LTLIBRARIES = \
	liblipssystem.la

liblipssystem_la_SOURCES = \
	lips-system.h \
	system.c \
	system.h \
	system-compiler.h \
	system-directory.c \
	system-directory.h \
	system-endian.h \
	system-error.c \
	system-error.h \
	system-file.c \
	system-file.h \
	system-execute.c \
	system-execute.h \
	system-module.c \
	system-module.h \
	system-notify.c \
	system-notify.h \
	system-path.c \
	system-path.h \
	system-relative.c \
	system-relative.h \
	system-types.c \
	system-types.h \
	system-user.c \
	system-user.h
