INCLUDES = -I$(srcdir)/..
AM_CFLAGS = $(LIPS_CFLAGS) $(SDL_CFLAGS) $(OPENGL_CFLAGS)

lib_LTLIBRARIES = \
	liblipswidget.la

liblipswidget_la_SOURCES = \
	lips-widget.h \
	widget.c \
	widget.h \
	widget-busy.c \
	widget-busy.h \
	widget-button.c \
	widget-button.h \
	widget-check.c \
	widget-check.h \
	widget-entry.c \
	widget-entry.h \
	widget-event.h \
	widget-group.c \
	widget-group.h \
	widget-image.c \
	widget-image.h \
	widget-label.c \
	widget-label.h \
	widget-manager.c \
	widget-manager.h \
	widget-menu.c \
	widget-menu.h \
	widget-menugroup.c \
	widget-menugroup.h \
	widget-private.h \
	widget-progress.c \
	widget-progress.h \
	widget-types.h \
	widget-window.c \
	widget-window.h
